# safetasks-v2

./: .dockerignore  .gitignore  AUDITORIA_TECNICA_2026.md  AUDITORIA_TECNICA_360.md  BACKEND_GUIDE.md  CONTRIBUTING.md  CORRECOES_CALCULOS_PERSISTENCIA.md  CORRECOES_CALENDARIO.md  CORRECOES_CALENDARIO_RESET.md  CORRECOES_CRITICAS_IMPLEMENTADAS.md  CORRECOES_IMPORTS_LINTER.md  CORRECOES_MISSING_GREENLET.md  CORRECOES_MISSING_GREENLET_FINAL.md  CORRECOES_MISSING_GREENLET_SOLUCAO_FINAL.md  CORRECOES_REACOES_BACKEND.md  CORRECOES_RESET_SANIDADE.md  DEPLOY_SPRINT1.md  Dockerfile  README.md  RESUMO_FINAL_CORRECOES.md  SOLUCAO_ERRO_SLOWAPI.md  SPRINT1_CONCLUIDA.md  SPRINT1_FINALIZACAO.md  SPRINT1_IMPLEMENTACAO.md  TECHNICAL_DOCS.md  docker-compose.yml  nixpacks.toml  railpack.json  render.yaml  test-accessibility.js  test-deploy.sh  test-payment-fields.js
backend/: .env.example  Dockerfile  MIGRATION_COMPLETE.md  README.md  SUPABASE_SETUP.md  alembic.ini  pyproject.toml  pyrightconfig.json  run.py  supabase_migration.sql  test.py  test_final_isolation.py  test_isolation.py
backend/alembic/: env.py
backend/alembic/versions/: 0d726d6008b3_add_productions_table.py  100bf2fc9b21_add_clients_table.py  199caa545697_add_crew_management_and_production_.py  1d398a2c43bc_add_shooting_sessions_jsonb_and_migrate_.py  3a3b0b8ac65a_update_production_crew_foreign_key_to_.py  53b3d912e160_add_notes_field_to_productions_table.py  69f94d59d51c_add_fiscal_and_payment_fields.py  (+11 more)
backend/app/: main.py
backend/scripts/: check_integrity.py
backend/tests/: test_production_service.py
(+147 files in other folders)
